cbits/Bullet.h

int btRaycastVehicle_m_indexRightAxis_get(void *c); //attribute: int btRaycastVehicle->m_indexRightAxis
void btRaycastVehicle_m_indexUpAxis_set(void *c,int a); //attribute: int btRaycastVehicle->m_indexUpAxis
int btRaycastVehicle_m_indexUpAxis_get(void *c); //attribute: int btRaycastVehicle->m_indexUpAxis
void btRaycastVehicle_m_indexForwardAxis_set(void *c,int a); //attribute: int btRaycastVehicle->m_indexForwardAxis
int btRaycastVehicle_m_indexForwardAxis_get(void *c); //attribute: int btRaycastVehicle->m_indexForwardAxis
void btRaycastVehicle_m_wheelInfo_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btWheelInfo> btRaycastVehicle->m_wheelInfo
void* btRaycastVehicle_m_wheelInfo_get(void *c); //attribute: ::btAlignedObjectArray<btWheelInfo> btRaycastVehicle->m_wheelInfo
void* btVehicleRaycaster_castRay(void *c,float* p0,float* p1,void* p2); //method: castRay void * ( ::btVehicleRaycaster::* )( ::btVector3 const &,::btVector3 const &,::btVehicleRaycaster::btVehicleRaycasterResult & ) 
void* btVehicleRaycaster_btVehicleRaycasterResult_new(); //constructor: btVehicleRaycasterResult  ( ::btVehicleRaycaster::btVehicleRaycasterResult::* )(  ) 
void btVehicleRaycaster_btVehicleRaycasterResult_free(void *c);
 
void btVehicleRaycaster_btVehicleRaycasterResult_m_distFraction_set(void *c,float a); //attribute: ::btScalar btVehicleRaycaster_btVehicleRaycasterResult->m_distFraction
float btVehicleRaycaster_btVehicleRaycasterResult_m_distFraction_get(void *c); //attribute: ::btScalar btVehicleRaycaster_btVehicleRaycasterResult->m_distFraction
void btVehicleRaycaster_btVehicleRaycasterResult_m_hitNormalInWorld_set(void *c,float* a); //attribute: ::btVector3 btVehicleRaycaster_btVehicleRaycasterResult->m_hitNormalInWorld
void btVehicleRaycaster_btVehicleRaycasterResult_m_hitNormalInWorld_get(void *c,float* a);
void btVehicleRaycaster_btVehicleRaycasterResult_m_hitPointInWorld_set(void *c,float* a); //attribute: ::btVector3 btVehicleRaycaster_btVehicleRaycasterResult->m_hitPointInWorld
void btVehicleRaycaster_btVehicleRaycasterResult_m_hitPointInWorld_get(void *c,float* a);
void* btRaycastVehicle_btVehicleTuning_new(); //constructor: btVehicleTuning  ( ::btRaycastVehicle::btVehicleTuning::* )(  ) 
void btRaycastVehicle_btVehicleTuning_free(void *c);
 
void btRaycastVehicle_btVehicleTuning_m_frictionSlip_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_frictionSlip
float btRaycastVehicle_btVehicleTuning_m_frictionSlip_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_frictionSlip
void btRaycastVehicle_btVehicleTuning_m_maxSuspensionForce_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_maxSuspensionForce
float btRaycastVehicle_btVehicleTuning_m_maxSuspensionForce_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_maxSuspensionForce
void btRaycastVehicle_btVehicleTuning_m_maxSuspensionTravelCm_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_maxSuspensionTravelCm
float btRaycastVehicle_btVehicleTuning_m_maxSuspensionTravelCm_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_maxSuspensionTravelCm
void btRaycastVehicle_btVehicleTuning_m_suspensionCompression_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionCompression
float btRaycastVehicle_btVehicleTuning_m_suspensionCompression_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionCompression
void btRaycastVehicle_btVehicleTuning_m_suspensionDamping_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionDamping
float btRaycastVehicle_btVehicleTuning_m_suspensionDamping_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionDamping
void btRaycastVehicle_btVehicleTuning_m_suspensionStiffness_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionStiffness