Physics/Bullet/Raw/BulletDynamics/Vehicle.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#70>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_indexRightAxis_get    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_indexUpAxis_set    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_indexUpAxis_get    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#72>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_indexForwardAxis_set    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#72>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_indexForwardAxis_get    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#123>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_wheelInfo_set    `( BtRaycastVehicleClass bc , BtAlignedObjectArray_btWheelInfo_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#123>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_m_wheelInfo_get    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btWheelInfo_'  mkBtAlignedObjectArray_btWheelInfo_* #}
-- * btVehicleRaycaster
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#30>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_castRay as btVehicleRaycaster_castRay    `( BtVehicleRaycasterClass bc , BtVehicleRaycaster_btVehicleRaycasterResultClass p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ from
, withVec3* `Vec3'  peekVec3* -- ^ to
, withBt* `p2'  -- ^ result
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#30>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_castRay as btVehicleRaycaster_castRay'    `( BtVehicleRaycasterClass bc , BtVehicleRaycaster_btVehicleRaycasterResultClass p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ from
, allocaVec3-  `Vec3'  peekVec3* -- ^ to
, withBt* `p2'  -- ^ result
 } ->  `VoidPtr'  mkVoidPtr* #}
-- * btVehicleRaycasterResult
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#24>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_new as btVehicleRaycaster_btVehicleRaycasterResult    {  } -> `BtVehicleRaycaster_btVehicleRaycasterResult' mkBtVehicleRaycaster_btVehicleRaycasterResult* #}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_free    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#27>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_distFraction_set    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#27>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_distFraction_get    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#26>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_hitNormalInWorld_set    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#26>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_hitNormalInWorld_get    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#25>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_hitPointInWorld_set    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.h?r=2223#25>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btVehicleRaycaster.cpp?r=2223>
-}
{#fun btVehicleRaycaster_btVehicleRaycasterResult_m_hitPointInWorld_get    `( BtVehicleRaycaster_btVehicleRaycasterResultClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * btVehicleTuning
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_new as btRaycastVehicle_btVehicleTuning    {  } -> `BtRaycastVehicle_btVehicleTuning' mkBtRaycastVehicle_btVehicleTuning* #}
{#fun btRaycastVehicle_btVehicleTuning_free    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_frictionSlip_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_frictionSlip_get    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_maxSuspensionForce_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_maxSuspensionForce_get    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_maxSuspensionTravelCm_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_maxSuspensionTravelCm_get    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_suspensionCompression_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_suspensionCompression_get    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_suspensionDamping_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_suspensionDamping_get    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#51>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_btVehicleTuning_m_suspensionStiffness_set    `( BtRaycastVehicle_btVehicleTuningClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#51>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
